--- a/source/stylesheets/_config.css.sass
+++ b/source/stylesheets/_config.css.sass
@@ -6,7 +6,7 @@ $secondary-font: #{"{{ theme.secondary_font | font_family }}"}
 
 $background-color: #{'{{ theme.background_color }}'}
 
-$header-background-color: #{'{{ theme.header_background_color }}'}
+$header-background-color: #00109E
 $header-text-color: #{'{{ theme.header_text_color }}'}
 
 $home-overlay-color: #{'{{ theme.home_image_overlay_color }}'}
