--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -1,6 +1,9 @@
 @import 'config'
 
 .category_list
+  padding: 0.5rem
+  background-color: black
+  border-bottom: 2px solid red
   margin: 0 auto 60px
   text-align: center
   
@@ -15,9 +18,9 @@
       font-size: 0
       
       &.current a
-        color: $primary-text-color
       
       a
+        color: white
         display: block
         font-size: 18px
         line-height: 24px
