--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -68,6 +68,8 @@ body
 header
   +pie-clearfix
   +transition(background .3s linear)
+  display: flex
+  justify-content: space-between
   background: $header-background-color
   font-family: $primary-font
   height: 90px
@@ -89,11 +91,9 @@ header
     color: $header-text-color
     float: left
     font-size: 20px
-    margin-left: 40px
     max-width: 60%
 
     @media screen and (max-width: $break-medium)
-      margin-left: 20px
 
     a
       color: $header-text-color
@@ -123,18 +123,21 @@ header
   .header_icons
     +vertical-align
     height: 30px
+    width: 130px
     list-style: none
-    position: absolute
-    right: 40px
 
     @media screen and (max-width: $break-medium)
-      right: 20px
+      width: none
+
+    @media screen and (max-width: $break-small)
+      width: auto
 
     li
       display: inline-block
       font-size: 0
       height: 30px
-      margin-left: 30px
+      padding: 0 1rem
+
 
       a
         color: $header-text-color
@@ -151,7 +154,6 @@ header
         top: 1px
 
       &.open_cart
-        margin-left: 23px
 
         @media screen and (max-width: $break-small)
           display: none
@@ -180,6 +182,9 @@ header
 
           &:nth-child(4)
             top: 99%
+
+header:after
+  content: none
 
 .cart_count
   position: absolute
