Change site font to times new roman

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -17,6 +17,8 @@ body
   line-height: 1
   overflow-y: scroll
   padding-top: 90px
+  font-family: TimesNewRoman,Times New Roman,Times,Baskerville,Georgia,serif
+  text-transform: uppercase
 
   &.has_welcome
     padding-top: 0
