--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -537,6 +537,9 @@ h2.featured_products
       font-size: 18px
       padding: 10px
 
+      button
+        margin: 1rem
+
       &:hover
         opacity: .6
 
