--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -10,8 +10,10 @@
   @media screen and (max-width: $break-small)
     margin-bottom: 40px
     padding: 0 20px
-  
+    padding-top: 20px
+
   ul
+    padding-top: 0.5rem
   
     li
       display: inline-block
