--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -72,12 +72,13 @@ header
   +transition(background .3s linear)
   display: flex
   justify-content: space-between
+  align-items: center
   background: $header-background-color
   font-family: $primary-font
   height: 90px
   left: 0
   margin: 0
-  padding: 20px 0
+  padding: 0 1rem
   position: fixed
   right: 0
   top: 0
@@ -123,7 +124,6 @@ header
           width: auto
 
   .header_icons
-    +vertical-align
     height: 30px
     width: 130px
     list-style: none
