--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -150,6 +150,7 @@
   padding: 0
   position: relative
   text-align: center
+    
   
   @media screen and (max-width: $break-small)
     margin: 0
@@ -176,7 +177,7 @@
       width: 50%
 
     @media screen and (max-width: $break-small)
-      padding: 0 0 40px 0
+      padding: 1rem
       width: 100%
       
     a
