--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -1,11 +1,13 @@
 @import 'config'
 
 .category_list
-  padding: 0.5rem
   background-color: black
   border-bottom: 2px solid red
   margin: 0 auto 60px
   text-align: center
+  position: sticky
+  top: 0
+  z-index: 999
   
   @media screen and (max-width: $break-small)
     margin-bottom: 40px
@@ -34,6 +36,7 @@
   .select
     display: none
     max-width: 100%
+    height: 35px
     
     @media screen and (max-width: $break-small)
       display: block
