--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -29,6 +29,9 @@
         font-size: 18px
         line-height: 24px
         padding: 0 10px 10px 
+      
+      a:hover 
+        opacity: 0.8
         
     @media screen and (max-width: $break-small)
       display: none
@@ -293,6 +296,9 @@
           
           .product_price
             font-size: 14px
+
+  li:hover 
+    filter: brightness(0.8)
             
 .no-flexbox .product_list li
   display: inline-block
