--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -39,6 +39,9 @@
   max-width: 50%
   width: 100%
 
+  .primary_image 
+    padding: 0 0.5rem
+
   @media screen and (max-width: $break-small)
     float: none
     max-width: 100%
