--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -174,6 +174,8 @@ button.reset-selection-button
   @media screen and (max-width: $break-small)
     text-align: center
 
+  text
+    display: block
   li
     display: inline-block
     margin-right: 20px
