--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -8,7 +8,8 @@
   position: sticky
   top: 0
   z-index: 3
-  
+  text-transform: uppercase
+
   @media screen and (max-width: $break-small)
     margin-bottom: 40px
     padding: 10px 10px 0
