--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -29,9 +29,10 @@
         font-size: 18px
         line-height: 24px
         padding: 0 10px 10px 
+        transition: .2s opacity ease-in-out
       
-      a:hover 
-        opacity: 0.8
+        &:hover 
+          opacity: 0.8
         
     @media screen and (max-width: $break-small)
       display: none
@@ -74,7 +75,7 @@
         margin: auto
       
       .category_overlay
-        +transition(opacity .1s linear)
+        +transition(opacity .1s ease-in-out)
         -webkit-backface-visibility: hidden
         background: $home-overlay-color
         bottom: 0
@@ -207,7 +208,7 @@
         z-index: 1
         
       .product_details
-        +transition(.3s linear)
+        +transition(.3s ease-in-out)
         color: $primary-text-color
         padding-top: 30px
         position: relative
