--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -99,6 +99,9 @@ header
     max-width: 60%
     transition: 0.2s filter ease-in-out
 
+    img
+      max-width: 100%
+
     &:hover 
       filter: brightness(0.8)
 
@@ -395,8 +398,6 @@ button, a.button
       right: 22px
       left: 22px
 
-
-
   .page_list
     display: none
     margin: 0 auto
@@ -577,10 +578,14 @@ h2.featured_products
       +transition(opacity .2s linear)
       color: $home-text-color
       font-size: 18px
-      padding: 10px
 
       button
         margin: 1rem
+
+        @media screen and (max-width: $break-small)
+          margin: 1rem 0
+          max-width: 200px
+
 
 section.content
   margin: 0 auto 360px auto
