remove image width + product_option_select` color is white - should be black

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -218,3 +218,5 @@ button.reset-selection-button
   @media screen and (max-width: $break-small)
     max-width: 100%
 
+.product_option_select
+  color: black
