sizing text colour fixed

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -312,7 +312,7 @@ button, a.button
     +appearance(none)
     background: none
     border: 0
-    color: #fff
+    color: #000000
     font-family: $secondary-font
     font-size: 14px
     height: 100%
